# LBM-CUDA

./: .gitignore  CMakeLists.txt  params.xml
LBM-C/: CMakeLists.txt  LBM-C.vcxproj  TINYXML_xmlIO.cpp  TINYXML_xmlIO.h  TINYXML_xmlIO.hh  collision.cu  cuda_util.cu  data_types.cuh  index.cu  infile_reader.cu  macros.cu  model_builder.cu  solver.cu
LBM-C/cgns/: cgns_input_handler.cu  cgns_output_handler.cu
